[gd_scene load_steps=7 format=2]

[ext_resource path="res://battle/ability_info_ui.gd" type="Script" id=1]
[ext_resource path="res://assets/battle/ability_info/invalid_position.png" type="Texture" id=2]
[ext_resource path="res://assets/battle/ability_info/ability_info_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/chary___.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/fonts/m3x6.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/battle/pip.png" type="Texture" id=8]

[node name="AbilityInfoUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AbilityInfoBackground" type="TextureRect" parent="."]
margin_left = -288.0
margin_top = -127.0
margin_right = -160.0
margin_bottom = -63.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( -192, -62 )
texture = ExtResource( 4 )

[node name="PipIcon" type="TextureRect" parent="."]
margin_left = -20.0
margin_top = -101.0
margin_right = -15.0
margin_bottom = -96.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 8 )

[node name="RequiredPosition" type="HBoxContainer" parent="."]
margin_left = -180.0
margin_top = -85.0
margin_right = -145.0
margin_bottom = -80.0
rect_scale = Vector2( 1.25, 1.25 )

[node name="Position3" type="TextureRect" parent="RequiredPosition"]
margin_right = 5.0
margin_bottom = 5.0
texture = ExtResource( 2 )

[node name="Position2" type="TextureRect" parent="RequiredPosition"]
margin_left = 9.0
margin_right = 14.0
margin_bottom = 5.0
texture = ExtResource( 2 )

[node name="Position1" type="TextureRect" parent="RequiredPosition"]
margin_left = 18.0
margin_right = 23.0
margin_bottom = 5.0
texture = ExtResource( 2 )

[node name="Position0" type="TextureRect" parent="RequiredPosition"]
margin_left = 27.0
margin_right = 32.0
margin_bottom = 5.0
texture = ExtResource( 2 )

[node name="TargetPosition" type="HBoxContainer" parent="."]
margin_left = -99.0
margin_top = -85.0
margin_right = -64.0
margin_bottom = -80.0
rect_scale = Vector2( 1.25, 1.25 )

[node name="Position0" type="TextureRect" parent="TargetPosition"]
margin_right = 5.0
margin_bottom = 5.0
texture = ExtResource( 2 )

[node name="Position1" type="TextureRect" parent="TargetPosition"]
margin_left = 9.0
margin_right = 14.0
margin_bottom = 5.0
texture = ExtResource( 2 )

[node name="Position2" type="TextureRect" parent="TargetPosition"]
margin_left = 18.0
margin_right = 23.0
margin_bottom = 5.0
texture = ExtResource( 2 )

[node name="Position3" type="TextureRect" parent="TargetPosition"]
margin_left = 27.0
margin_right = 32.0
margin_bottom = 5.0
texture = ExtResource( 2 )

[node name="PipCost" type="Label" parent="."]
margin_left = -18.0
margin_top = -100.0
margin_bottom = -81.0
rect_scale = Vector2( 1.25, 1.25 )
custom_colors/font_color = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/line_spacing = -3
custom_fonts/font = ExtResource( 6 )
text = "3"
align = 1
valign = 1
autowrap = true

[node name="Name" type="Label" parent="."]
margin_left = -183.0
margin_top = -72.0
margin_right = -12.0
margin_bottom = -55.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0.796078, 0.858824, 0.988235, 1 )
custom_constants/line_spacing = -3
custom_fonts/font = ExtResource( 6 )
text = "Ability name"
autowrap = true
uppercase = true

[node name="Description" type="RichTextLabel" parent="."]
margin_left = -183.0
margin_top = -57.0
margin_right = -8.0
margin_bottom = -7.0
custom_colors/default_color = Color( 0.607843, 0.678431, 0.717647, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
scroll_active = false
